objects/ssot__CaseProceeding__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__Address__c</fullName>
        <label>Address</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Application__c</fullName>
        <label>Application</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CaseFilingDateTime__c</fullName>
        <label>Case Filing DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__CaseId__c</fullName>
        <label>Case</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CaseProceedingStatus__c</fullName>
        <label>Case Proceeding Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CaseProceedingSubType__c</fullName>
        <label>Case Proceeding Sub Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CaseProceedingType__c</fullName>
        <label>Case Proceeding Type</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CaseProceeding_CaseId_map_Case_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CaseProceeding_CaseId_map_Case_Id_N_1</label>
        <referenceTo>ssot__Case__dlm</referenceTo>
        <relationshipLabel>CaseProceeding_CaseId_map_Case_Id_N_1</relationshipLabel>
        <relationshipName>CaseProceeding_CaseId_map_Case_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EndDateTime__c</fullName>
        <label>End Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalCaseIdentifier__c</fullName>
        <label>External Case Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalIdentifier__c</fullName>
        <label>External Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Case Proceeding Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RelatedCaseProceeding__c</fullName>
        <label>Related Case Proceeding</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__StartDateTime__c</fullName>
        <label>Start Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1718549032818_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CaseProceeding_Address_map_Address_I_rel</label>
        <referenceTo>ssot__Address__dlm</referenceTo>
        <relationshipLabel>CaseProceeding_Address_map_Address_I_rel</relationshipLabel>
        <relationshipName>rel_1718549032818_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1718549035595_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CaseProceeding_RelatedCaseProceeding_rel</label>
        <referenceTo>ssot__CaseProceeding__dlm</referenceTo>
        <relationshipLabel>CaseProceeding_RelatedCaseProceeding_rel</relationshipLabel>
        <relationshipName>rel_1718549035595_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>